# fastapi-order-quality-gate

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: api-quality-gate.yml  deploy-render.yml  publish-allure-report.yml  remote-api-smoke.yml
app/: __init__.py  main.py
app/api/: routes_auth.py  routes_health.py  routes_orders.py  routes_products.py
app/core/: config.py  exceptions.py  security.py
app/db/: base.py  seed.py  session.py
app/models/: order.py  order_idempotency.py  product.py  user.py
app/schemas/: auth.py  error.py  order.py  product.py
app/services/: auth_service.py  order_service.py  product_service.py
docs/: api.md  architecture.md  bug-analysis.md  demo-script.md  interview-guide.md  resume-points.md  test-case-design.md  test-plan.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/public/: quality-summary.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/tests/: ui-smoke.spec.ts
scripts/: api-e2e.ps1  build_quality_snapshot.py  demo-reset.ps1  demo-start.ps1  generate-test-ideas.py  quality-gate.ps1  report-summary.py  ui-smoke.ps1  write_allure_metadata.py
tests/: conftest.py
tests/api/: test_auth.py  test_health.py  test_openapi_contract.py  test_order_concurrency.py  test_order_state.py  test_orders.py  test_products.py
tests/e2e/: __init__.py  client.py  config.py  conftest.py  test_live_order_api.py
tests/meta/: __init__.py  test_api_test_quality.py  (+7 more)
(+4 files in other folders)
